Fix CORS cho phep Vercel truy cap